--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "email": "odannycx@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "^6.2"
+    }
 }
