--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "^6.2"
+    },
+    "require-dev": {
         "phpunit/phpunit": "^5.5"
     },
     "autoload": {
